# modules

./: CMakeLists.txt  README.md  azure-pipelines.yml
Bruno_Bordi/: CMakeLists.txt
Bruno_Bordi/conv_selection/: ConvolveSelection.vcxproj
Bruno_Bordi/db_to_voltage/: CMakeLists.txt  module.rc  resource.h
se_sdk3/: Drawing.h  Drawing_API.h  hasMidiTuning.h  mp_api.h  mp_interface_wrapper.h  mp_midi.h  mp_sdk_audio.h  mp_sdk_common.h  mp_sdk_gui.h  mp_sdk_gui2.h
shared/: FileFinder.cpp  FileFinder.h  FilterBase.h  FontCache.cpp  FontCache.h  ImageCache.cpp  ImageMetadata.h  xp_dynamic_linking.cpp  xplatform.h
